--- a/src/app/routes/inventory/item-maintenance/item-maintenance.component.html
+++ b/src/app/routes/inventory/item-maintenance/item-maintenance.component.html
@@ -25,6 +25,7 @@
 </div>
 <nz-steps nzType="navigation" [nzCurrent]="stepIndex" style="padding: 15px">
   <nz-step nzTitle="{{ 'steps.item.info' | i18n }}"> </nz-step>
+  <nz-step nzTitle="{{ 'steps.item.attribute-tracking' | i18n }}"> </nz-step>
   <nz-step nzTitle="{{ 'steps.item.package-type.info' | i18n }}"> </nz-step>
   <nz-step nzTitle="{{ 'steps.item.confirm' | i18n }}"> </nz-step>
 </nz-steps>
@@ -34,10 +35,10 @@
   <div nz-row [nzGutter]="24">
     <div nz-col [nzSpan]="8">
       <nz-form-item>
-        <nz-form-label [nzSpan]="10">
+        <nz-form-label [nzSpan]="8">
           {{ 'item.name' | i18n }}
         </nz-form-label>
-        <nz-form-control *ngIf="newItem" [nzSpan]="14" nzHasFeedback
+        <nz-form-control *ngIf="newItem" [nzSpan]="16" nzHasFeedback
           [nzErrorTip]="itemNumberErrorTpl">
 
           <!--
@@ -59,7 +60,7 @@
           </ng-template>
         </nz-form-control>
 
-        <nz-form-control *ngIf="!newItem" [nzSpan]="14">
+        <nz-form-control *ngIf="!newItem" [nzSpan]="16">
 
 
           <input nz-input [(ngModel)]="currentItem.name" required disabled />
@@ -81,10 +82,10 @@
     
     <div nz-col [nzSpan]="8" >
       <nz-form-item nzFlex>
-        <nz-form-label for="client" [nzSpan]="6">
+        <nz-form-label for="client" [nzSpan]="8">
           {{ 'client' | i18n }}
         </nz-form-label>
-        <nz-form-control [nzSpan]="18">
+        <nz-form-control [nzSpan]="16">
           <nz-select [(ngModel)]="currentItem.clientId" (ngModelChange)="clientChanged()">
             <nz-option *ngFor="let client of availableClients" [nzLabel]="client.name" [nzValue]="client.id"></nz-option>
           </nz-select>
@@ -109,29 +110,34 @@
         </nz-form-control>
       </nz-form-item>
     </div>
-
-    <div nz-col [nzSpan]="8">
-      <nz-form-item>
-        <nz-form-label [nzSpan]="10">
-          {{ 'trackingVolumeFlag' | i18n }}
-        </nz-form-label>
-        <nz-form-control [nzSpan]="14">
-          <label nz-checkbox [(ngModel)]="currentItem.trackingVolumeFlag"></label>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-
-    <div nz-col [nzSpan]="8">
-      <nz-form-item>
-        <nz-form-label [nzSpan]="8">
-          {{ 'trackingLotNumberFlag' | i18n }}
+    
+    <div nz-col [nzSpan]="8" >
+      <nz-form-item nzFlex>
+        <nz-form-label for="abcCategory" [nzSpan]="8">
+          {{ 'abc-category' | i18n }}
         </nz-form-label>
         <nz-form-control [nzSpan]="16">
-          <label nz-checkbox [(ngModel)]="currentItem.trackingLotNumberFlag"></label>
+          <nz-select [(ngModel)]="currentItem.abcCategoryId" (ngModelChange)="abcCategoryChanged()"  style="width: 150px">
+            <nz-option *ngFor="let abcCategory of availableABCCategories" [nzLabel]="abcCategory.description" [nzValue]="abcCategory.id"></nz-option>
+          </nz-select>
         </nz-form-control>
       </nz-form-item>
     </div>
-  </div>
+    
+    <div nz-col [nzSpan]="8" >
+      <nz-form-item nzFlex>
+        <nz-form-label for="velocity" [nzSpan]="8">
+          {{ 'velocity' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="16">
+          <nz-select [(ngModel)]="currentItem.velocityId" (ngModelChange)="velocityChanged()" style="width: 150px">
+            <nz-option *ngFor="let velocity of availableVelocities" [nzLabel]="velocity.description" [nzValue]="velocity.id"></nz-option>
+          </nz-select>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    
+  </div> 
 
   <div nz-row [nzGutter]="24">
 
@@ -147,56 +153,25 @@
     </div>
     <div nz-col [nzSpan]="8">
       <nz-form-item>
-        <nz-form-label [nzSpan]="10">
-          {{ 'trackingManufactureDateFlag' | i18n }}
-        </nz-form-label>
-        <nz-form-control [nzSpan]="14">
-          <label nz-checkbox [(ngModel)]="currentItem.trackingManufactureDateFlag"></label>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-
-    <div nz-col [nzSpan]="8">
-      <nz-form-item>
         <nz-form-label [nzSpan]="8">
-          {{ 'shelfLifeDays' | i18n }}
-        </nz-form-label>
-        <nz-form-control [nzSpan]="16" nzHasFeedback nzErrorTip="{{ 'error.form.field.required' | i18n }}">
-          <input nz-input [(ngModel)]="currentItem.shelfLifeDays" required />
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-  </div>
-
-  <div nz-row [nzGutter]="24">
-
-    <div nz-col [nzSpan]="8">
-      <nz-form-item>
-        <nz-form-label [nzSpan]="10">
-          {{ 'trackingExpirationDateFlag' | i18n }}
-        </nz-form-label>
-        <nz-form-control [nzSpan]="14">
-          <label nz-checkbox [(ngModel)]="currentItem.trackingExpirationDateFlag"></label>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col [nzSpan]="8">
-      <nz-form-item>
-        <nz-form-label [nzSpan]="10">
           {{ 'allowAllocationByLPN' | i18n }}
         </nz-form-label>
-        <nz-form-control [nzSpan]="14">
+        <nz-form-control [nzSpan]="16">
           <label nz-checkbox [(ngModel)]="currentItem.allowAllocationByLPN"></label>
         </nz-form-control>
       </nz-form-item>
     </div>
 
+    
+  </div>
+
+  <div nz-row [nzGutter]="24">
     <div nz-col [nzSpan]="8">
       <nz-form-item>
-        <nz-form-label [nzSpan]="14">
+        <nz-form-label [nzSpan]="12">
           {{ 'allocationRoundUpStrategyType' | i18n }}
         </nz-form-label>
-        <nz-form-control [nzSpan]="10">
+        <nz-form-control [nzSpan]="12">
           <nz-select nzAllowClear [(ngModel)]="currentItem.allocationRoundUpStrategyType"
             (ngModelChange)="allocationRoundUpStrategyTypeChanged($event)" style="width: 170px;">
             <nz-option *ngFor="let allocationRoundUpStrategyType of allocationRoundUpStrategyTypesKeys"
@@ -207,10 +182,6 @@
         </nz-form-control>
       </nz-form-item>
     </div>
-  </div>
-
-  <div nz-row [nzGutter]="24">
-
     <div nz-col [nzSpan]="8">
       <nz-form-item>
         <nz-form-label [nzSpan]="14">
@@ -231,103 +202,7 @@
         </nz-form-control>
       </nz-form-item>
     </div>
-    <div nz-col [nzSpan]="8" >
-      <nz-form-item nzFlex>
-        <nz-form-label for="velocity" [nzSpan]="6">
-          {{ 'velocity' | i18n }}
-        </nz-form-label>
-        <nz-form-control [nzSpan]="18">
-          <nz-select [(ngModel)]="currentItem.velocityId" (ngModelChange)="velocityChanged()" style="width: 150px">
-            <nz-option *ngFor="let velocity of availableVelocities" [nzLabel]="velocity.description" [nzValue]="velocity.id"></nz-option>
-          </nz-select>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-  </div>
-  <div nz-row [nzGutter]="24">
-    <div nz-col [nzSpan]="8" >
-      <nz-form-item nzFlex>
-        <nz-form-label for="abcCategory" [nzSpan]="6">
-          {{ 'abc-category' | i18n }}
-        </nz-form-label>
-        <nz-form-control [nzSpan]="18">
-          <nz-select [(ngModel)]="currentItem.abcCategoryId" (ngModelChange)="abcCategoryChanged()"  style="width: 150px">
-            <nz-option *ngFor="let abcCategory of availableABCCategories" [nzLabel]="abcCategory.description" [nzValue]="abcCategory.id"></nz-option>
-          </nz-select>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-     
-    <div nz-col [nzSpan]="8">
-      <nz-form-item>
-        <nz-form-label [nzSpan]="8">
-          {{ 'trackingColorFlag' | i18n }}
-        </nz-form-label>
-        <nz-form-control [nzSpan]="16">
-          <label nz-checkbox [(ngModel)]="currentItem.trackingColorFlag"></label>
-        </nz-form-control>
-      </nz-form-item>
-    </div>     
-    
-    <div nz-col [nzSpan]="8">
-      <nz-form-item>
-        <nz-form-label [nzSpan]="8">
-          {{ 'defaultColor' | i18n }}
-        </nz-form-label>
-        <nz-form-control [nzSpan]="16" >
-          <input nz-input [(ngModel)]="currentItem.defaultColor"  />
-        </nz-form-control>
-      </nz-form-item>
-    </div> 
-  </div>
-  
-  <div nz-row [nzGutter]="24">      
-    <div nz-col [nzSpan]="8">
-      <nz-form-item>
-        <nz-form-label [nzSpan]="8">
-          {{ 'trackingProductSizeFlag' | i18n }}
-        </nz-form-label>
-        <nz-form-control [nzSpan]="16">
-          <label nz-checkbox [(ngModel)]="currentItem.trackingProductSizeFlag"></label>
-        </nz-form-control>
-      </nz-form-item>
-    </div>     
-    
-    <div nz-col [nzSpan]="8">
-      <nz-form-item>
-        <nz-form-label [nzSpan]="8">
-          {{ 'defaultProductSize' | i18n }}
-        </nz-form-label>
-        <nz-form-control [nzSpan]="16" >
-          <input nz-input [(ngModel)]="currentItem.defaultProductSize"  />
-        </nz-form-control>
-      </nz-form-item>
-    </div> 
-  </div>
-  
-  <div nz-row [nzGutter]="24">      
-    <div nz-col [nzSpan]="8">
-      <nz-form-item>
-        <nz-form-label [nzSpan]="8">
-          {{ 'trackingStyleFlag' | i18n }}
-        </nz-form-label>
-        <nz-form-control [nzSpan]="16">
-          <label nz-checkbox [(ngModel)]="currentItem.trackingStyleFlag"></label>
-        </nz-form-control>
-      </nz-form-item>
-    </div>     
-    
-    <div nz-col [nzSpan]="8">
-      <nz-form-item>
-        <nz-form-label [nzSpan]="8">
-          {{ 'defaultStyle' | i18n }}
-        </nz-form-label>
-        <nz-form-control [nzSpan]="16" >
-          <input nz-input [(ngModel)]="currentItem.defaultStyle"  />
-        </nz-form-control>
-      </nz-form-item>
-    </div> 
-  </div>
+  </div>  
   
   <div nz-row [nzGutter]="24">      
     <div nz-col [nzSpan]="8">
@@ -364,8 +239,266 @@
 
 </div>
 
+
+<!-- Show basic item information -->
+<div class="small-card" *ngIf="stepIndex === 1 && currentItem != undefined">
+  
+  <div nz-row [nzGutter]="24">
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="10">
+          {{ 'trackingVolumeFlag' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="14">
+          <label nz-checkbox [(ngModel)]="currentItem.trackingVolumeFlag"></label>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+     
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="10">
+          {{ 'trackingLotNumberFlag' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="14">
+          <label nz-checkbox [(ngModel)]="currentItem.trackingLotNumberFlag"></label>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+  </div>
+    
+  <div nz-row [nzGutter]="24">
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="10">
+          {{ 'trackingManufactureDateFlag' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="14">
+          <label nz-checkbox [(ngModel)]="currentItem.trackingManufactureDateFlag"></label>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="10">
+          {{ 'trackingExpirationDateFlag' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="14">
+          <label nz-checkbox [(ngModel)]="currentItem.trackingExpirationDateFlag"></label>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="8">
+          {{ 'shelfLifeDays' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="16" nzHasFeedback nzErrorTip="{{ 'error.form.field.required' | i18n }}">
+          <input nz-input [(ngModel)]="currentItem.shelfLifeDays" required />
+        </nz-form-control>
+      </nz-form-item>
+    </div> 
+  </div>
+  
+  <div nz-row [nzGutter]="24">
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="10">
+          {{ 'trackingColorFlag' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="14">
+          <label nz-checkbox [(ngModel)]="currentItem.trackingColorFlag"></label>
+        </nz-form-control>
+      </nz-form-item>
+    </div>     
+    
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="8">
+          {{ 'defaultColor' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="16" >
+          <input nz-input [(ngModel)]="currentItem.defaultColor"  />
+        </nz-form-control>
+      </nz-form-item>
+    </div> 
+  
+  </div>
+  <div nz-row [nzGutter]="24">
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="10">
+          {{ 'trackingProductSizeFlag' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="14">
+          <label nz-checkbox [(ngModel)]="currentItem.trackingProductSizeFlag"></label>
+        </nz-form-control>
+      </nz-form-item>
+    </div>     
+    
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="8">
+          {{ 'defaultProductSize' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="16" >
+          <input nz-input [(ngModel)]="currentItem.defaultProductSize"  />
+        </nz-form-control>
+      </nz-form-item>
+    </div> 
+  
+  </div>
+  <div nz-row [nzGutter]="24">
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="10">
+          {{ 'trackingStyleFlag' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="14">
+          <label nz-checkbox [(ngModel)]="currentItem.trackingStyleFlag"></label>
+        </nz-form-control>
+      </nz-form-item>
+    </div>     
+    
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="8">
+          {{ 'defaultStyle' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="16" >
+          <input nz-input [(ngModel)]="currentItem.defaultStyle"  />
+        </nz-form-control>
+      </nz-form-item>
+    </div> 
+  
+  </div>
+  
+  <div nz-row [nzGutter]="24">
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="10">
+          {{ 'trackingInventoryAttribute1Flag' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="14">
+          <label nz-checkbox [(ngModel)]="currentItem.trackingInventoryAttribute1Flag"></label>
+        </nz-form-control>
+      </nz-form-item>
+    </div>     
+    
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="8">
+          {{ 'defaultInventoryAttribute1' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="16" >
+          <input nz-input [(ngModel)]="currentItem.defaultInventoryAttribute1"  />
+        </nz-form-control>
+      </nz-form-item>
+    </div> 
+  
+  </div>
+  
+  <div nz-row [nzGutter]="24">
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="10">
+          {{ 'trackingInventoryAttribute2Flag' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="14">
+          <label nz-checkbox [(ngModel)]="currentItem.trackingInventoryAttribute2Flag"></label>
+        </nz-form-control>
+      </nz-form-item>
+    </div>     
+    
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="8">
+          {{ 'defaultInventoryAttribute2' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="16" >
+          <input nz-input [(ngModel)]="currentItem.defaultInventoryAttribute2"  />
+        </nz-form-control>
+      </nz-form-item>
+    </div> 
+  
+  </div>
+  
+  <div nz-row [nzGutter]="24">
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="10">
+          {{ 'trackingInventoryAttribute3Flag' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="14">
+          <label nz-checkbox [(ngModel)]="currentItem.trackingInventoryAttribute3Flag"></label>
+        </nz-form-control>
+      </nz-form-item>
+    </div>     
+    
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="8">
+          {{ 'defaultInventoryAttribute3' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="16" >
+          <input nz-input [(ngModel)]="currentItem.defaultInventoryAttribute3"  />
+        </nz-form-control>
+      </nz-form-item>
+    </div> 
+  
+  </div>
+  
+  <div nz-row [nzGutter]="24">
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="10">
+          {{ 'trackingInventoryAttribute4Flag' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="14">
+          <label nz-checkbox [(ngModel)]="currentItem.trackingInventoryAttribute4Flag"></label>
+        </nz-form-control>
+      </nz-form-item>
+    </div>     
+    
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="8">
+          {{ 'defaultInventoryAttribute4' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="16" >
+          <input nz-input [(ngModel)]="currentItem.defaultInventoryAttribute4"  />
+        </nz-form-control>
+      </nz-form-item>
+    </div> 
+  
+  </div>
+  <div nz-row [nzGutter]="24">
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="10">
+          {{ 'trackingInventoryAttribute5Flag' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="14">
+          <label nz-checkbox [(ngModel)]="currentItem.trackingInventoryAttribute5Flag"></label>
+        </nz-form-control>
+      </nz-form-item>
+    </div>     
+    
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="8">
+          {{ 'defaultInventoryAttribute5' | i18n }}
+        </nz-form-label>
+        <nz-form-control [nzSpan]="16" >
+          <input nz-input [(ngModel)]="currentItem.defaultInventoryAttribute5"  />
+        </nz-form-control>
+      </nz-form-item>
+    </div> 
+  
+  </div>
+</div>
 <!-- Maintain package type -->
-<div *ngIf="stepIndex === 1" class="small-card">
+<div *ngIf="stepIndex === 2" class="small-card">
   <div class="search-result-list">
     <nz-table [nzScroll]="{ x: 'true', y: 'true' }" #nestedTable [nzData]="currentItem.itemPackageTypes"
       [nzShowPagination]="false">
@@ -471,7 +604,7 @@
 </div>
 
 <!-- Confirm the change -->
-<div class="small-card" *ngIf="stepIndex === 2">
+<div class="small-card" *ngIf="stepIndex === 3">
   <nz-card>
     <nz-descriptions nzBordered="true">
       <nz-descriptions-item nzTitle="{{ 'name' | i18n }}">{{ currentItem.name }} </nz-descriptions-item>
@@ -564,11 +697,11 @@
     <span>{{ 'steps.previous' | i18n }}</span>
   </button>
   <nz-divider nzType="vertical" *ngIf="stepIndex < 2"></nz-divider>
-  <button nz-button nzType="default" (click)="nextStep()" *ngIf="stepIndex < 2">
+  <button nz-button nzType="default" (click)="nextStep()" *ngIf="stepIndex < 3">
     <span>{{ 'steps.next' | i18n }}</span>
   </button>
   <nz-divider nzType="vertical" *ngIf="stepIndex === 2"></nz-divider>
-  <button nz-button nzType="primary" (click)="confirmItem()" *ngIf="stepIndex === 2">
+  <button nz-button nzType="primary" (click)="confirmItem()" *ngIf="stepIndex === 3">
     <span> {{ 'confirm' | i18n }}</span>
   </button>
 </div>
