--- a/src/app/routes/util/table-column-selection/table-column-selection.component.less
+++ b/src/app/routes/util/table-column-selection/table-column-selection.component.less
@@ -1,35 +1,35 @@
-.example-list {
+.example-list { 
+  overflow: hidden;
   display: block;
   width: 500px;
   max-width: 100%;
-  min-height: 60px; 
-  overflow: hidden;
-  background: white;
+  min-height: 60px;
   border: solid 1px #ccc;
   border-radius: 4px;
+  background: white;
 }
 
 .example-box {
+  cursor: move;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
   padding: 20px 10px;
-  color: rgba(0, 0, 0, 0.87);
-  font-size: 14px;
-  background: white;
   border-bottom: solid 1px #ccc;
-  cursor: move;
+  font-size: 14px;
+  color: rgb(0 0 0 / 87%);
+  background: white;
 }
 
 .cdk-drag-preview {
   box-sizing: border-box;
   border: none;
   border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 5px 5px -3px rgb(0 0 0 / 20%),
+              0 8px 10px 1px rgb(0 0 0 / 14%),
+              0 3px 14px 2px rgb(0 0 0 / 12%);
 }
 
 .cdk-drag-placeholder {
@@ -50,9 +50,9 @@
 
 
 .drag-handle {
+  cursor: move;
   display: flex;
   align-items: center;
-  cursor: move;
 
   .handle {
     margin-right: 5px;
@@ -68,8 +68,8 @@
   box-sizing: border-box;
   padding: 4px;
   border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 5px 5px -3px rgb(0 0 0 / 20%),
+    0 8px 10px 1px rgb(0 0 0 / 14%), 0 3px 14px 2px rgb(0 0 0 / 12%);
 }
 
 .cdk-drag-placeholder {
@@ -86,4 +86,8 @@
 
 .col-md {
   width: 20%;
+}
+
+td {
+  text-align: center;
 }
